--- a/SharpDj.Common/SharpDj.Common.csproj
+++ b/SharpDj.Common/SharpDj.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Network" Version="6.1.4.20" />
+    <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
   </ItemGroup>
 
   <ItemGroup>
