--- a/SharpDj.Common/SharpDj.Common.csproj
+++ b/SharpDj.Common/SharpDj.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CryptSharpOfficial" Version="2.1.0" />
     <PackageReference Include="Network" Version="6.1.4.20" />
     <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
   </ItemGroup>
