Refactor chain of responsibility (DI works as in aspnet core) + Refactor efcore configurations and entities

--- a/SharpDj.Server/appsettings.json
+++ b/SharpDj.Server/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Main": "Server=(localdb)\\MSSQLLocalDB; Database=SdjServerDB; Trusted_Connection=true;Max Pool Size=200"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": "Debug",
@@ -7,9 +10,15 @@
         "Name": "Console",
         "Args": {
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] <{ThreadId}> {Message:lj}{NewLine}{Exception}"
-        } 
+        }
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
+  },
+  "Settings": {
+    "Ip": "192.168.0.164",
+    "Port": 5666,
+    "RSAKeySize": 0,
+    "Logging": true
   }
 }
