+Add docker +Add k8s support

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Vv]olumes/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -82,6 +83,9 @@ StyleCopReport.xml
 *.pidb
 *.svclog
 *.scc
+
+# executable
+*.exe
 
 # Chutzpah Test files
 _Chutzpah*
