--- a/SharpDj.Server/appsettings.json
+++ b/SharpDj.Server/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Main": "Server=(localdb)\\MSSQLLocalDB; Database=SdjServerDB; Trusted_Connection=true;Max Pool Size=200"
+    "Main": "Server=172.17.0.7,1433; Initial Catalog=SdjServerDB; Database=SdjServerDB;Max Pool Size=200; User ID=sa; Password=Qwerty1!;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
@@ -16,7 +16,7 @@
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithExceptionDetails" ]
   },
   "Settings": {
-    "Ip": "192.168.0.164",
+    "Ip": "0.0.0.0",
     "Port": 5666,
     "RSAKeySize": 0,
     "Logging": true
