--- a/SharpDj.Server/Dockerfile
+++ b/SharpDj.Server/Dockerfile
@@ -1,7 +1,9 @@
-FROM mcr.microsoft.com/dotnet/runtime:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+EXPOSE 5666
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["SharpDj.Server/appsettings.json", "SharpDj.Server/"] 
 COPY ["SharpDj.Server/SharpDj.Server.csproj", "SharpDj.Server/"]
@@ -22,7 +24,5 @@ RUN dotnet publish "SharpDj.Server.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-
-EXPOSE 5666
 
 ENTRYPOINT ["dotnet", "SharpDj.Server.dll"]
